# qmlpy

./: .gitignore  LICENSE  README.md  requirements.txt
archived/properties/: special_properties.py
archived/widgets/api/: fixups.py
blueprint/: readme.md  run.py
blueprint/resources/widgets_template/: __base__.txt  __init__.txt
blueprint/src/: __init__.py  common.py  io.py  typehint.py
blueprint/src/qml_modules_indexing/: __init__.py  main.py  no1_all_qml_modules.py  no2_all_qml_types.py  no3_all_qml_widgets.py  no4_all_pyml_widgets.py  no4_all_qmlpy_widgets.py
blueprint/src/sidework/: list_all_group_properties.py
blueprint/src/template_generator/: __init__.py  generate_all_widgets.py  generate_widget_sheet.py  list_all_group_properties.py
concept_code/: eg_01.txt
docs/: pycharm-typing-and-code-completion-note.zh.md  the-essence-of-core-design.zh.md
lib/fake-typing/: pyproject.toml
lib/fake-typing/fake_typing/: __init__.py  decorator.py  fake_type_getter.py  global_register.py
qmlpy/: __init__.py  _typehint.py  application.py  component.py
qmlpy/compositor/: __init__.py  compositor.py
qmlpy/core/: __init__.py  application.py  component.py  typehint.py
qmlpy/core/compositor/: compositor.py
qmlpy/core/declarative/: id_system.py
qmlpy/declarative/: __init__.py  context_manager.py  id_system.py
qmlpy/properties/: __init__.py
qmlpy/widgets/: __init__.py  widget_props.py  widget_sheet.py
test/: hello_world.py
tests/: check_class_bases.py  hello_world.py  show_widget_properties.py
tests/example_code/: hello_world.py
(+110 files in other folders)
